--- a/admin.html
+++ b/admin.html
@@ -1,41 +1,134 @@
-<script type="module">
-  // Import Firebase SDKs
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-  import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin - TEAM RAW by Sidd</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #121212;
+      color: #f5f5f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      min-height: 100vh;
+      margin: 0;
+    }
 
-  // Firebase configuration (check authDomain & storageBucket in Firebase console!)
-  const firebaseConfig = {
-    apiKey: "AIzaSyAgjQzG2w9lkx8S1OCIR3e-MNxILMN1rw",
-    authDomain: "clientportal-ef181.firebaseapp.com",   // ✅ fixed
-    projectId: "clientportal-ef181",
-    storageBucket: "clientportal-ef181.appspot.com",   // ✅ fixed
-    messagingSenderId: "427314875945",
-    appId: "1:427314875945:web:17eb6479334bcb024c1638"
-  };
+    h1 {
+      color: #ff1a1a;
+      margin-bottom: 10px;
+      font-size: 28px;
+      letter-spacing: 2px;
+    }
 
-  // Initialize Firebase + Firestore
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
+    h2 {
+      color: #ff3b3b;
+      margin-bottom: 20px;
+      font-size: 20px;
+    }
 
-  // Load clients into table
-  async function loadClients() {
-    const querySnapshot = await getDocs(collection(db, "clients"));
-    const table = document.getElementById("clientTable");
+    table {
+      border-collapse: collapse;
+      width: 90%;
+      max-width: 1000px;
+      margin-top: 20px;
+      background: #1e1e1e;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
+    }
 
-    querySnapshot.forEach((doc) => {
-      const data = doc.data();
-      const row = `<tr>
-        <td>${data.fullname || ""}</td>
-        <td>${data.age || ""}</td>
-        <td>${data.gender || ""}</td>
-        <td>${data.email || ""}</td>
-        <td>${data.phone || ""}</td>
-        <td>${data.city || ""}</td>
-      </tr>`;
-      table.innerHTML += row;
-    });
-  }
+    th, td {
+      border: 1px solid #ff3b3b;
+      padding: 10px;
+      text-align: center;
+    }
 
-  // Run after DOM is loaded
-  window.onload = loadClients;
-</script>
+    th {
+      background: #b30000;
+      color: white;
+    }
+
+    tr:nth-child(even) {
+      background: #2a2a2a;
+    }
+
+    tr:hover {
+      background: rgba(255, 0, 0, 0.2);
+    }
+  </style>
+</head>
+<body>
+  <h1>TEAM RAW by Sidd</h1>
+  <h2>Registered Clients</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Full Name</th>
+        <th>Age</th>
+        <th>Gender</th>
+        <th>Email</th>
+        <th>Phone</th>
+        <th>City</th>
+        <th>Height</th>
+        <th>Weight</th>
+        <th>Activity</th>
+        <th>Goal</th>
+        <th>Medical</th>
+        <th>Mode</th>
+      </tr>
+    </thead>
+    <tbody id="clientData"></tbody>
+  </table>
+
+  <!-- Firebase Script -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyAgjQzG2w9lkx8S1OCIR3e-MNxILMN1rw",
+      authDomain: "clientportal-ef181.firebaseapp.com",
+      projectId: "clientportal-ef181",
+      storageBucket: "clientportal-ef181.appspot.com",
+      messagingSenderId: "427314875945",
+      appId: "1:427314875945:web:17eb6479334bcb024c1638"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    async function loadClients() {
+      const querySnapshot = await getDocs(collection(db, "clients"));
+      const tbody = document.getElementById("clientData");
+      tbody.innerHTML = "";
+
+      querySnapshot.forEach((doc) => {
+        const data = doc.data();
+        const row = `
+          <tr>
+            <td>${data.fullname}</td>
+            <td>${data.age}</td>
+            <td>${data.gender}</td>
+            <td>${data.email}</td>
+            <td>${data.phone}</td>
+            <td>${data.city}</td>
+            <td>${data.height}</td>
+            <td>${data.weight}</td>
+            <td>${data.activity}</td>
+            <td>${data.goal}</td>
+            <td>${data.medical}</td>
+            <td>${data.mode}</td>
+          </tr>
+        `;
+        tbody.innerHTML += row;
+      });
+    }
+
+    loadClients();
+  </script>
+</body>
+</html>
