--- a/index.html
+++ b/index.html
@@ -1,152 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TEAM RAW | Register</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #0d0d0d;
-      color: #f5f5f5;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: #b30000;
-      padding: 20px;
-      text-align: center;
-      font-size: 2rem;
-      font-weight: bold;
-      color: white;
-    }
-    .container {
-      max-width: 600px;
-      margin: 30px auto;
-      background: #1a1a1a;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px #b30000;
-    }
-    h2 {
-      text-align: center;
-      color: #fff;
-    }
-    input, select, textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0;
-      border-radius: 5px;
-      border: none;
-      outline: none;
-      background: #262626;
-      color: white;
-    }
-    button {
-      width: 100%;
-      padding: 12px;
-      background-color: #b30000;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 1rem;
-    }
-    button:hover {
-      background-color: #e60000;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TEAM RAW | Register</title>
+<style>
+  /* ---------------- Body ---------------- */
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #0d0d0d;
+    color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+    overflow-y: auto; /* allow scrolling */
+  }
+
+  /* ---------------- Floating Background ---------------- */
+  .floating-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: visible;
+  }
+
+  .floating-bg div {
+    position: absolute;
+    border-radius: 50%;
+    background: rgba(179,0,0,0.2);
+    animation: float 15s infinite ease-in-out;
+  }
+
+  .floating-bg div:nth-child(1) { width: 200px; height: 200px; top: 10%; left: 5%; animation-delay: 0s; }
+  .floating-bg div:nth-child(2) { width: 300px; height: 300px; top: 50%; left: 80%; animation-delay: 5s; }
+  .floating-bg div:nth-child(3) { width: 150px; height: 150px; top: 70%; left: 20%; animation-delay: 2s; }
+
+  @keyframes float {
+    0%, 100% { transform: translateY(0) translateX(0) scale(1); }
+    50% { transform: translateY(-50px) translateX(50px) scale(1.1); }
+  }
+
+  /* ---------------- Header ---------------- */
+  header {
+    background-color: #b30000;
+    padding: 20px;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
+    color: white;
+    animation: slideDown 1s ease;
+    position: relative;
+    z-index: 1;
+  }
+
+  @keyframes slideDown {
+    from { transform: translateY(-50px); opacity: 0; }
+    to { transform: translateY(0); opacity: 1; }
+  }
+
+  /* ---------------- Container ---------------- */
+  .container {
+    max-width: 600px;
+    margin: 50px auto;
+    background: rgba(26,26,26,0.9);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 25px #b30000;
+    animation: fadeInContainer 1s ease 0.5s forwards;
+    opacity: 0;
+    position: relative;
+    z-index: 1;
+  }
+
+  @keyframes fadeInContainer {
+    to { opacity: 1; }
+  }
+
+  h2 {
+    text-align: center;
+    color: #fff;
+    animation: fadeInText 1s ease 0.7s forwards;
+    opacity: 0;
+  }
+
+  @keyframes fadeInText {
+    to { opacity: 1; }
+  }
+
+  /* ---------------- Form Elements ---------------- */
+  input, select, textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 8px 0;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    background: #262626;
+    color: white;
+    transition: all 0.3s ease;
+  }
+
+  input:focus, select:focus, textarea:focus {
+    background: #333333;
+    box-shadow: 0 0 5px #b30000;
+    transform: scale(1.02);
+  }
+
+  button {
+    width: 100%;
+    padding: 12px;
+    background-color: #b30000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: all 0.3s ease;
+    animation: fadeInButton 1s ease 1s forwards;
+    opacity: 0;
+  }
+
+  button:hover {
+    background-color: #e60000;
+    transform: scale(1.05);
+  }
+
+  @keyframes fadeInButton {
+    to { opacity: 1; }
+  }
+</style>
 </head>
 <body>
-  <header>TEAM RAW – Client Registration</header>
 
-  <div class="container">
-    <h2>Register Here</h2>
-    <form id="registerForm">
-      <input type="text" id="fullname" placeholder="Full Name" required>
-      <input type="number" id="age" placeholder="Age" required>
-      <select id="gender" required>
-        <option value="">Select Gender</option>
-        <option>Male</option>
-        <option>Female</option>
-        <option>Other</option>
-      </select>
-      <input type="email" id="email" placeholder="Email" required>
-      <input type="text" id="phone" placeholder="Phone" required>
-      <input type="text" id="city" placeholder="City" required>
-      <input type="text" id="height" placeholder="Height (cm)">
-      <input type="text" id="weight" placeholder="Weight (kg)">
+<!-- Floating Background -->
+<div class="floating-bg">
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
 
-      <label for="activity"></label>
-      <select id="activity" required>
-        <option value="">Activity Level</option>
-        <option>Sedentary</option>
-        <option>Moderate</option>
-        <option>Active</option>
-      </select>
+<!-- Header -->
+<header>TEAM RAW – Client Registration</header>
 
-       <label for="goal"></label>
-      <select id="goal" required>
-        <option value="">Fitness Goal</option>
-        <option>Weight Loss</option>
-        <option>Muscle Gain</option>
-        <option>Maintain</option>
-      </select>
+<!-- Form Container -->
+<div class="container">
+  <h2>Register Here</h2>
+  <form id="registerForm">
+    <input type="text" id="fullname" placeholder="Full Name" required>
+    <input type="number" id="age" placeholder="Age" required>
+    <select id="gender" required>
+      <option value="">Select Gender</option>
+      <option>Male</option>
+      <option>Female</option>
+      <option>Other</option>
+    </select>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="text" id="phone" placeholder="Phone" required>
+    <input type="text" id="city" placeholder="City" required>
+    <input type="text" id="height" placeholder="Height (cm)">
+    <input type="text" id="weight" placeholder="Weight (kg)">
+    <select id="activity" required>
+      <option value="">Activity Level</option>
+      <option>Sedentary</option>
+      <option>Moderate</option>
+      <option>Active</option>
+    </select>
+    <select id="goal" required>
+      <option value="">Fitness Goal</option>
+      <option>Weight Loss</option>
+      <option>Muscle Gain</option>
+      <option>Maintain</option>
+    </select>
+    <textarea id="medical" placeholder="Medical Conditions"></textarea>
+    <select id="mode">
+      <option value="">Mode of Training</option>
+      <option>Online</option>
+      <option>Offline</option>
+    </select>
+    <button type="submit">Register</button>
+  </form>
+</div>
 
-      <textarea id="medical" placeholder="Medical Conditions"></textarea>
-      <select id="mode">
-        <option value="">Mode of Training</option>
-        <option>Online</option>
-        <option>Offline</option>
-      </select>
-      <button type="submit">Register</button>
-    </form>
-  </div>
+<!-- Firebase SDK -->
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
 
-  <!-- Firebase SDK -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
+const firebaseConfig = {
+  apiKey: "AIzaSyAgjQzG2w9lkx8S1OVIR3e-MNxZLLMN1rw",
+  authDomain: "clientportal-ef181.firebaseapp.com",
+  projectId: "clientportal-ef181",
+  storageBucket: "clientportal-ef181.appspot.com",
+  messagingSenderId: "427314875945",
+  appId: "1:427314875945:web:17eb6479334bcb024c1638"
+};
 
-    // Firebase Config (same as your admin.html)
-    const firebaseConfig = {
-      apiKey: "AIzaSyAgjQzG2w9lkx8S1OVIR3e-MNxZLLMN1rw",
-      authDomain: "clientportal-ef181.firebaseapp.com",
-      projectId: "clientportal-ef181",
-      storageBucket: "clientportal-ef181.appspot.com",
-      messagingSenderId: "427314875945",
-      appId: "1:427314875945:web:17eb6479334bcb024c1638"
-    };
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    // Handle form submit
-    document.getElementById("registerForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      try {
-        await addDoc(collection(db, "clients"), {
-          fullname: document.getElementById("fullname").value,
-          age: document.getElementById("age").value,
-          gender: document.getElementById("gender").value,
-          email: document.getElementById("email").value,
-          phone: document.getElementById("phone").value,
-          city: document.getElementById("city").value,
-          height: document.getElementById("height").value,
-          weight: document.getElementById("weight").value,
-          activity: document.getElementById("activity").value,
-          goal: document.getElementById("goal").value,
-          medical: document.getElementById("medical").value,
-          mode: document.getElementById("mode").value
-        });
-
-        alert("Registration successful!");
-        document.getElementById("registerForm").reset();
-      } catch (error) {
-        alert("Error: " + error.message);
-      }
+document.getElementById("registerForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
+  try {
+    await addDoc(collection(db, "clients"), {
+      fullname: document.getElementById("fullname").value,
+      age: document.getElementById("age").value,
+      gender: document.getElementById("gender").value,
+      email: document.getElementById("email").value,
+      phone: document.getElementById("phone").value,
+      city: document.getElementById("city").value,
+      height: document.getElementById("height").value,
+      weight: document.getElementById("weight").value,
+      activity: document.getElementById("activity").value,
+      goal: document.getElementById("goal").value,
+      medical: document.getElementById("medical").value,
+      mode: document.getElementById("mode").value
     });
-  </script>
+    alert("Registration successful!");
+    document.getElementById("registerForm").reset();
+  } catch (error) {
+    alert("Error: " + error.message);
+  }
+});
+</script>
+
 </body>
 </html>
