--- a/admin.html
+++ b/admin.html
@@ -1,193 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TEAM RAW | Admin</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #0d0d0d;
-      color: #f5f5f5;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: #b30000;
-      padding: 20px;
-      text-align: center;
-      font-size: 2rem;
-      font-weight: bold;
-      color: white;
-    }
-    .container {
-      max-width: 900px;
-      margin: 30px auto;
-      background: #1a1a1a;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px #b30000;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-    th, td {
-      border: 1px solid #b30000;
-      padding: 10px;
-      text-align: left;
-    }
-    th {
-      background-color: #b30000;
-      color: white;
-    }
-    tr:nth-child(even) {
-      background-color: #262626;
-    }
-    .login-box {
-      text-align: center;
-      margin-top: 20px;
-    }
-    input {
-      padding: 10px;
-      margin: 5px;
-      border-radius: 5px;
-      border: none;
-      outline: none;
-    }
-    button {
-      padding: 10px 20px;
-      background-color: #b30000;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #e60000;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>TEAM RAW | Admin</title>
+<style>
+  body { font-family: Arial, sans-serif; background-color: #0d0d0d; color: #f5f5f5; margin:0; padding:0; }
+  header { background-color:#b30000; padding:20px; text-align:center; font-size:2rem; font-weight:bold; color:white; }
+  .container { max-width:900px; margin:30px auto; background:#1a1a1a; padding:20px; border-radius:10px; box-shadow:0 0 15px #b30000; }
+  table { width:100%; border-collapse:collapse; margin-top:20px; }
+  th, td { border:1px solid #b30000; padding:10px; text-align:left; }
+  th { background-color:#b30000; color:white; }
+  tr:nth-child(even) { background-color:#262626; }
+  .login-box { text-align:center; margin-top:20px; }
+  input { padding:10px; margin:5px; border-radius:5px; border:none; outline:none; }
+  button { padding:10px 20px; background-color:#b30000; color:white; border:none; border-radius:5px; cursor:pointer; margin-top:10px; }
+  button:hover { background-color:#e60000; }
+</style>
 </head>
 <body>
-  <header>TEAM RAW by Sidd – Admin Panel</header>
-  
-  <div class="container">
-    <!-- Login Form -->
-    <div id="loginDiv" class="login-box">
-      <h2>Admin Login</h2>
-      <input type="email" id="adminEmail" placeholder="Email" /><br>
-      <input type="password" id="adminPassword" placeholder="Password" /><br>
-      <button onclick="login()">Login</button>
-    </div>
 
-    <!-- Client Table -->
-    <div id="dataDiv" style="display:none;">
-      <h2>Registered Clients</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Full Name</th>
-            <th>Age</th>
-            <th>Gender</th>
-            <th>Email</th>
-            <th>Phone</th>
-            <th>City</th>
-            <th>Height</th>
-            <th>Weight</th>
-            <th>Activity</th>
-            <th>Goal</th>
-            <th>Medical</th>
-            <th>Mode</th>
-          </tr>
-        </thead>
-        <tbody id="clientTable"></tbody>
-      </table>
-      <button onclick="logout()">Logout</button>
-    </div>
+<header>TEAM RAW – Admin Panel</header>
+
+<div class="container">
+
+  <div id="loginDiv" class="login-box">
+    <h2>Admin Login</h2>
+    <input type="email" id="adminEmail" placeholder="Email" /><br>
+    <input type="password" id="adminPassword" placeholder="Password" /><br>
+    <button onclick="login()">Login</button>
   </div>
 
-  <!-- Firebase SDKs -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
-    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
+  <div id="dataDiv" style="display:none;">
+    <h2>Registered Clients</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Full Name</th><th>Age</th><th>Gender</th><th>Email</th><th>Phone</th><th>City</th>
+          <th>Height</th><th>Weight</th><th>Activity</th><th>Goal</th><th>Medical</th><th>Mode</th>
+        </tr>
+      </thead>
+      <tbody id="clientTable"></tbody>
+    </table>
+    <button onclick="logout()">Logout</button>
+  </div>
 
-    // Firebase Config
-   const firebaseConfig = {
+</div>
+
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
+
+const firebaseConfig = {
   apiKey: "AIzaSyAgjQzG2w9lkx8S1OVIR3e-MNxZLLMN1rw",
   authDomain: "clientportal-ef181.firebaseapp.com",
-  databaseURL: "https://clientportal-ef181-default-rtdb.firebaseio.com",
   projectId: "clientportal-ef181",
-  storageBucket: "clientportal-ef181.appspot.com",   // ✅ fixed here
+  storageBucket: "clientportal-ef181.appspot.com",  // ✅ corrected
   messagingSenderId: "427314875945",
-  appId: "1:427314875945:web:17eb6479334bcb024c1638"
+  appId: "1:427314875945:web:0c34963aac91e5a64c1638"
 };
 
-    // Init Firebase
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-    // Login function
-    window.login = async function () {
-      const email = document.getElementById("adminEmail").value;
-      const password = document.getElementById("adminPassword").value;
+window.login = async function() {
+  const email = document.getElementById("adminEmail").value;
+  const password = document.getElementById("adminPassword").value;
+  try {
+    await signInWithEmailAndPassword(auth, email, password);
+    alert("Login successful!");
+  } catch (err) {
+    alert("Login failed: " + err.message);
+  }
+};
 
-      try {
-        await signInWithEmailAndPassword(auth, email, password);
-        alert("Login successful!");
-      } catch (error) {
-        alert("Login failed: " + error.message);
-      }
-    };
+window.logout = async function() {
+  await signOut(auth);
+  alert("Logged out");
+};
 
-    // Logout function
-    window.logout = async function () {
-      await signOut(auth);
-      alert("Logged out");
-    };
-
-    // Load Clients Data
-    async function loadClients() {
-      const querySnapshot = await getDocs(collection(db, "clients"));
-      const table = document.getElementById("clientTable");
-      table.innerHTML = "";
-
-      querySnapshot.forEach((doc) => {
-        const data = doc.data();
-        const row = `
-          <tr>
-            <td>${data.name || data.fullname || ""}</td>
-            <td>${data.age || ""}</td>
-            <td>${data.gender || ""}</td>
-            <td>${data.email || ""}</td>
-            <td>${data.phone || ""}</td>
-            <td>${data.city || ""}</td>
-            <td>${data.height || ""}</td>
-            <td>${data.weight || ""}</td>
-            <td>${data.activity || ""}</td>
-            <td>${data.goal || ""}</td>
-            <td>${data.medical || ""}</td>
-            <td>${data.mode || ""}</td>
-          </tr>`;
-        table.innerHTML += row;
-      });
-    }
-
-    // Check Auth State
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        document.getElementById("loginDiv").style.display = "none";
-        document.getElementById("dataDiv").style.display = "block";
-        loadClients();
-      } else {
-        document.getElementById("loginDiv").style.display = "block";
-        document.getElementById("dataDiv").style.display = "none";
-      }
+async function loadClients() {
+  try {
+    const querySnapshot = await getDocs(collection(db, "clients"));
+    console.log("Fetched clients:", querySnapshot.docs.map(d => d.data()));
+    const table = document.getElementById("clientTable");
+    table.innerHTML = "";
+    querySnapshot.forEach(doc => {
+      const data = doc.data();
+      const row = `
+        <tr>
+          <td>${data.fullname || ""}</td>
+          <td>${data.age || ""}</td>
+          <td>${data.gender || ""}</td>
+          <td>${data.email || ""}</td>
+          <td>${data.phone || ""}</td>
+          <td>${data.city || ""}</td>
+          <td>${data.height || ""}</td>
+          <td>${data.weight || ""}</td>
+          <td>${data.activity || ""}</td>
+          <td>${data.goal || ""}</td>
+          <td>${data.medical || ""}</td>
+          <td>${data.mode || ""}</td>
+        </tr>`;
+      table.innerHTML += row;
     });
-  </script>
+  } catch (err) {
+    console.error("Error loading clients:", err);
+  }
+}
+
+onAuthStateChanged(auth, user => {
+  if (user) {
+    document.getElementById("loginDiv").style.display = "none";
+    document.getElementById("dataDiv").style.display = "block";
+    loadClients();
+  } else {
+    document.getElementById("loginDiv").style.display = "block";
+    document.getElementById("dataDiv").style.display = "none";
+  }
+});
+</script>
+
 </body>
 </html>
-
-
